[workspace]
members = [
  'contracts/*', "packages/*",
]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[workspace.dependencies]
cosmwasm-schema = "2.0.3"
cosmwasm-std = "2.0.3"
cw-utils = "2.0.0"
schemars = "0.8.21"
serde = "1.0.202"
thiserror = "1.0.61"